styles: Prevent <figure> from overflowing horizontally
Bug: T328348

--- a/assets/styles/wmui-blog.css
+++ b/assets/styles/wmui-blog.css
@@ -145,6 +145,7 @@ td {
 .figure--image > img,
 .figure--video > video {
 	display: block;
+	max-width: 100%;
 	max-height: 50vh;
 	margin: 1.6rem auto;
 	/* Prevent small media objects from losing their original aspect ratio, see T313362. */
